grammar.js
    source_file: $ => seq(
      repeat($.include),
      seq(repeat($._one_decl), repeat($._one_package_or_model)),
    ),

    _one_decl: $ => choice($.node_decl, $.type_decl, $.const_decl, $.ext_node_decl),

    // Package rules

    _one_package_or_model: $ => choice($.package_decl, $.model_decl),
    identifier_ref: $ => prec(9999, seq(
      optional(seq(
        field('package', alias($._identifier_ref_package, $.identifier)),
        '::',
      )),
      field('member', alias($._identifier, $.identifier)),
    )),
    _identifier: _ => /[_a-zA-Z][_'a-zA-Z0-9]*/,

    // Ident rules

    identifier: $ => prec.right(20, seq($._identifier, repeat($.pragma))),
    typed_ids: $ => seq(
      separated1(field('name', $.identifier), ','),
      ':',
      field('type', $._type),
    ),
    _typed_valued_ids_list: $ => separated1($.typed_valued_ids, ';'),
    typed_valued_ids: $ => choice(
      seq(separated1(field('name', $.identifier), ','), ':', field('type', $._type)),
      seq(field('name', $.identifier), ':', field('type', $._type), '=', field('value', $._expression)),
    ),

    node_decl: $ => seq(
      optional('unsafe'),
      choice('node', 'function'),
      field('name', $.identifier),
      optional($.static_params),
      choice($._node_definition, $._node_alias),
    ),
    _node_definition: $ => seq(
      $._node_profile,
      optional(';'),
      repeat($.one_local_decl),
      field('body', $.node_body),
      optional(choice('.', ';')),
    ),
    _node_alias: $ => seq(
      optional($._node_profile),
      '=',
      field('alias', $.effective_node),
      optional(';'),
    ),

    params: $ => seq('(', separated($.var_decl, ';'), ')'),
    var_decl: $ => choice(
      $.typed_ids,
      seq($.typed_ids, 'when', $.clock_expression),
      seq('(', repeat($.typed_ids), ')', 'when', $.clock_expression),
    ),

    // Constant decl rules

    type_decl: $ => seq('type', repeat1(seq($.one_type_decl, ';'))),
    one_type_decl: $ => seq(
      field('name', $.identifier),
      optional(seq('=', field('type', $._one_type_decl_value))),
    ),
    _one_type_decl_value: $ => choice(
      $._type,
      $.enum_type_value,
      $.struct_type_value,
    ),
    enum_type_value: $ => seq(
      'enum',
      '{',
      separated1(field('constant', $.identifier), ','),
      '}',
    ),
    struct_type_value: $ => seq(optional('struct'), '{', $._typed_valued_ids_list, '}'),

    // Simple type rules

    _type: $ => choice(
      $.identifier_type,
      $.primitive_type,
      $.table_type,
    ),
    identifier_type: $ => prec(999, $.identifier_ref),
    primitive_type: _ => choice('bool', 'int', 'real'),
    table_type: $ => prec.left(PREC.hat, seq(field('element', $._type), '^', field('length', $._expression))),

    // Ext nodes rules

    node_body: $ => seq(
      'let',
      repeat($._equation),
      'tel',
    ),

    _equation: $ => choice($.assert_equation, $.eq_equation),
    eq_equation: $ => seq(
      field('left', $.left_expression_list),
      '=',
      field('right', $._expression),
      ';',
    ),

    // Left rules

    left_expression_list: $ => choice(
      separated1($._left_expression, ','),
      seq('(', separated($._left_expression, ','), ')'),
    ),
    _left_expression: $ => choice(
      $.identifier_left_expression,
      $.field_left_expression,
      $.index_left_expression,
    ),
    identifier_left_expression: $ => $.identifier,
    _expression: $ => choice(
      $._expression1,
      alias($.comparison_expression, $.binary_expression),
      alias($.binary_expression0, $.binary_expression),
    ),

    _expression1: $ => choice(
      $._constant,
      $.identifier_expression,
      $.parenthesized_expression,
      $.tuple_expression,
      $.table_expression,
      $.field_expression,
      $.index_expression,
      $.call_expression,
      $.if_expression,
      $.merge_expression,
      $.when_expression,
      $.unary_expression,
      $.binary_expression,
      $.nary_expression,
    ),

    identifier_expression: $ => $.identifier_ref,

    parenthesized_expression: $ => seq('(', $._expression, ')'),
    binary_expression: $ => choice(
      prec.left(PREC.additive, binaryExpr($._expression1, '+', '-')),
      prec.left(PREC.multiplicative, binaryExpr($._expression1, '*', '/', '%', 'mod', 'div')),
      prec.left(PREC.power, binaryExpr($._expression1, '**')),
      prec.left(PREC.hat, binaryExpr($._expression1, '^')),
      prec.right(PREC.fby, binaryExpr($._expression1, 'fby')),
    ),

    integer_literal: _ => /\d+/,
